--- a/dashboard.html
+++ b/dashboard.html
@@ -1,4 +1,4 @@
-<!doctype html>
+< !DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -82,15 +82,9 @@
         <div class="fikra-nav-right">
           <button
             id="theme-toggle"
-            class="fikra-nav-btn"
+            class="fikra-nav-btn theme-toggle-btn"
             onclick="toggleTheme()"
             title="Toggle Theme"
-            style="
-              margin-right: 8px;
-              width: 36px;
-              padding: 0;
-              justify-content: center;
-            "
           >
             🌙</button
           ><a href="org-dashboard.html" class="fikra-nav-btn org-btn"
@@ -105,8 +99,7 @@
       <div class="site-main-content">
         <section
           id="dashboard-screen"
-          class="screen site-screen dashboard-root active"
-          style="opacity: 1"
+          class="screen site-screen dashboard-root active opacity-1"
         >
           <div class="tac-glitch" id="tac-glitch"></div>
           <div class="dash-hero">
@@ -144,7 +137,7 @@
                     COMPLETION: <span id="mission-pct">0%</span>
                   </div>
                   <div class="dmc-bar">
-                    <div id="mission-fill" style="width: 0%"></div>
+                    <div id="mission-fill" class="w-0"></div>
                   </div>
                 </div>
               </div>
