--- a/org-dashboard.html
+++ b/org-dashboard.html
@@ -507,9 +507,7 @@
           .map(
             (
               c,
-            ) => `<button class="filter-item ${c === " all" ? " active" : " "}" onclick="setCity(this,'${c}')" >$ {
-            c.charAt(0).toUpperCase() + c.slice(1)
-        }
+            ) => `<button class="filter-item ${c === " all" ? " active" : " "}" onclick="setCity(this,'${c}')" >${c.charAt(0).toUpperCase() + c.slice(1)}
 
         </button>`,
           )
@@ -522,9 +520,7 @@
           .map(
             (
               t,
-            ) => `<button class="filter-item ${t === " all" ? " active" : " "}" onclick="setTheme(this,'${t}')" >$ {
-            t
-        }
+            ) => `<button class="filter-item ${t === " all" ? " active" : " "}" onclick="setTheme(this,'${t}')" >${t}
 
         </button>`,
           )
@@ -536,9 +532,7 @@
           .map(
             (
               t,
-            ) => `<button class="tag-pill ${t === " all" ? " active" : " "}" onclick="setTheme(null,'${t}')" >$ {
-            t
-        }
+            ) => `<button class="tag-pill ${t === " all" ? " active" : " "}" onclick="setTheme(null,'${t}')" >${t}
 
         </button>`,
           )
@@ -651,40 +645,25 @@
         data.forEach((i) => {
           const card = document.createElement("div");
 
-          card.className = `card $ {
-                pickedIds.has(i.id) ? "picked-state" : ""
-            }
+          card.className = `card ${pickedIds.has(i.id) ? "picked-state" : ""}
 
             `;
 
-          card.innerHTML = ` <div class="card-tag" >$ {
-                i.tag
-            }
+          card.innerHTML = ` <div class="card-tag" >${i.tag}
 
-            </div> <div class="card-idea" >$ {
-                i.idea
-            }
+            </div> <div class="card-idea" >${i.idea}
 
-            </div> <div class="card-footer" > <div class="card-user" > <div class="u-avatar" >$ {
-                i.name.charAt(0,
-                )
-            }
+            </div> <div class="card-footer" > <div class="card-user" > <div class="u-avatar" >${i.name.charAt(0,                )}
 
-            </div> <div class="u-info" > <span class="u-name" >$ {
-                i.name
-            }
+            </div> <div class="u-info" > <span class="u-name" >${i.name}
 
-            </span> <span class="u-loc" >$ {
-                i.city
-            }
+            </span> <span class="u-loc" >${i.city}
 
             </span> </div> </div> <div class="card-actions" > <button class="btn-card btn-save ${savedIds.has(i.id) ? " active" : " "}" onclick="toggleSave(event, ${i.id}, this)" > <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" ><path d="M19 21l-7-5-7 5V5a2 2 0 0 1 2-2h10a2 2 0 0 1 2 2z" /></svg> </button> <button class="btn-card btn-pick" onclick="openPick(event, ${i.id})" > <svg width="14" height="14" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5" stroke-linecap="round" stroke-linejoin="round" ><polyline points="20 6 9 17 4 12" /></svg> </button> </div> </div> `;
           grid.appendChild(card);
         });
 
-        document.getElementById("pool-count").innerText = `Displaying $ {
-        data.length
-    }
+        document.getElementById("pool-count").innerText = `Displaying ${data.length}
 
     intelligence nodes`;
       }
