--- a/org-dashboard.html
+++ b/org-dashboard.html
@@ -2,7 +2,7 @@
 content="FIKRA Organization Dashboard — Browse and pick youth ideas from around the globe."
 /><title>FIKRA — Global Organization Dashboard</title><link rel="icon" href="favicon.ico" type="image/x-icon" /><link rel="stylesheet" href="shared-nav.css" /><link rel="preconnect" href="https://fonts.googleapis.com" /><link rel="preconnect" href="https://fonts.gstatic.com" crossorigin /><link href="https://fonts.googleapis.com/css2?family=Space+Grotesk:wght@300;400;500;600;700;800&display=swap"
 rel="stylesheet"
-/><link rel="stylesheet" href="org-dashboard.css" /></head><body class="fikra-nav-offset">< !-- Global Live Ticker --><div class="global-live-ticker"><div class="ticker-content"><span class="ticker-item"
+/><link rel="stylesheet" href="org-dashboard.css" /></head><body class="fikra-nav-offset">< !-- SCANLINE FX --><div class="scanline-effect" style="position: fixed; inset: 0; height: 100vh; background: linear-gradient(to bottom, transparent 50%, rgba(0, 255, 65, 0.02) 50%); background-size: 100% 4px; z-index: 9999; pointer-events: none;"></div>< !-- Global Live Ticker --><div class="global-live-ticker" style="border-bottom: 1px solid var(--matrix-green);"><div class="ticker-content"><span class="ticker-item"
 ><span class="ticker-dot"></span>LIVE TRANSMISSION: NEW IDEA FROM TOKYO</span><span class="ticker-item"
 ><span class="ticker-dot"></span>NEURAL SYNC ACTIVE: 1.2K THINKERS ONLINE</span><span class="ticker-item"
 ><span class="ticker-dot"></span>REMIX SIGNAL DETECTED IN LONDON</span><span class="ticker-item"
@@ -51,34 +51,51 @@ onclick="setAge(this, '18-21')"
 >18 - 21</button><button class="filter-item"
 data-age="22-25"
 onclick="setAge(this, '22-25')"
->22 - 25 </button></div></div></aside><main class="main"><section class="org-banner"><div class="ob-content"><h2>Empowering the Next Generation</h2><p>Discover raw talent and unfiltered ideas from young visionaries worldwide. Pick the most promising fikras to collaborate,
-mentor,
-or sponsor their journey. </p></div><div class="ob-stat"><div class="ob-stat-val">24</div><div class="ob-stat-lbl">Global Ideas<br />Pending</div></div></section><section class="stats-row"><article class="stat-card"><div class="stat-icon-wrap"><svg width="24"
-height="24"
-viewBox="0 0 24 24"
-fill="none"
-stroke="currentColor"
-stroke-width="2.5"
-stroke-linecap="round"
-stroke-linejoin="round"
-><path d="M9 11l3 3L22 4" /><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11"
-/></svg></div><div class="stat-label">Total Ideas</div><div class="stat-value" id="stat-total">0</div><div class="stat-note"><span>+42</span>this week</div></article><article class="stat-card"><div class="stat-icon-wrap"><svg width="24"
-height="24"
-viewBox="0 0 24 24"
-fill="none"
-stroke="currentColor"
-stroke-width="2.5"
-stroke-linecap="round"
-stroke-linejoin="round"
-><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z" /><circle cx="12" cy="12" r="3" /></svg></div><div class="stat-label">Views</div><div class="stat-value" id="stat-browsed">0</div><div class="stat-note">in this session</div></article><article class="stat-card"><div class="stat-icon-wrap"><svg width="24"
-height="24"
-viewBox="0 0 24 24"
-fill="none"
-stroke="currentColor"
-stroke-width="2.5"
-stroke-linecap="round"
-stroke-linejoin="round"
-><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" /><circle cx="12" cy="7" r="4" /><path d="M23 21v-2a4 4 0 0 0-3-3.87" /><path d="M16 3.13a4 4 0 0 1 0 7.75" /></svg></div><div class="stat-label">Network Reach</div><div class="stat-value" id="stat-youth">0</div><div class="stat-note">across <span>Worldwide</span></div></article></section><section class="pool-header"><div><div class="pool-title">Global Idea Pool</div><div class="pool-count" id="pool-count"></div></div><div class="pool-controls"><select class="select-sort"
+>22 - 25 </button></div></div></aside><main class="main">
+        <section class="org-banner">
+          <div class="ob-content">
+            <h2>SYSTEM REGISTRY: GLOBAL TALENT</h2>
+            <p>
+              INTERCEPTING RAW THINKER SIGNALS ACROSS GEOGRAPHICAL NODES. 
+              SECURE HIGH-ENERGY INTELLIGENCE TO INITIATE COLLABORATIVE PROTOCOLS.
+            </p>
+          </div>
+          <div class="ob-stat">
+            <div class="ob-stat-val">24</div>
+            <div class="ob-stat-lbl">NODES PENDING</div>
+          </div>
+        </section>
+        <section class="stats-row">
+          <article class="stat-card">
+            <div class="stat-icon-wrap">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M9 11l3 3L22 4" /><path d="M21 12v7a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V5a2 2 0 0 1 2-2h11" /></svg>
+            </div>
+            <div class="stat-label">TOTAL IDEAS</div>
+            <div class="stat-value" id="stat-total">0</div>
+            <div class="stat-note">SYSTEM SCAN ACTIVE</div>
+          </article>
+          <article class="stat-card">
+            <div class="stat-icon-wrap">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M1 12s4-8 11-8 11 8 11 8-4 8-11 8-11-8-11-8z" /><circle cx="12" cy="12" r="3" /></svg>
+            </div>
+            <div class="stat-label">SIGNAL VIEWS</div>
+            <div class="stat-value" id="stat-browsed">0</div>
+            <div class="stat-note">SESSION ACTIVITY</div>
+          </article>
+          <article class="stat-card">
+            <div class="stat-icon-wrap">
+              <svg width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2.5"><path d="M17 21v-2a4 4 0 0 0-4-4H5a4 4 0 0 0-4 4v2" /><circle cx="12" cy="7" r="4" /><path d="M23 21v-2a4 4 0 0 0-3-3.87" /><path d="M16 3.13a4 4 0 0 1 0 7.75" /></svg>
+            </div>
+            <div class="stat-label">NETWORK REACH</div>
+            <div class="stat-value" id="stat-youth">0</div>
+            <div class="stat-note">WORLDWIDE NODES</div>
+          </article>
+        </section>
+        <section class="pool-header">
+          <div>
+            <div class="pool-title">ACTIVE INTELLIGENCE POOL</div>
+            <div class="pool-count" id="pool-count">CALIBRATING NODES...</div>
+          </div><div class="pool-controls"><select class="select-sort"
 id="sort-select"
 title="Sort ideas"
 aria-label="Sort ideas"
